Enable Keystone notifications
This change enables Keystone notifications and adds two parameters
to control the notification driver and format.

Change-Id: I23ac3c46ee9eb49523d3b8dab027ef21fc6e42df

--- a/controller.yaml
+++ b/controller.yaml
@@ -255,6 +255,16 @@ parameters:
     description: Keystone key for signing tokens.
     type: string
     hidden: true
+  KeystoneNotificationDriver:
+    description: Comma-separated list of Oslo notification drivers used by Keystone
+    default: ['messaging']
+    type: comma_delimited_list
+  KeystoneNotificationFormat:
+    description: The Keystone notification format
+    default: 'basic'
+    type: string
+    constraints:
+      - allowed_values: [ 'basic', 'cadf' ]
   MysqlClusterUniquePart:
     description: A unique identifier of the MySQL cluster the controller is in.
     type: string
