--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -227,6 +227,16 @@ parameters:
     description: Keystone key for signing tokens.
     type: string
     hidden: true
+  KeystoneNotificationDriver:
+    description: Comma-separated list of Oslo notification drivers used by Keystone
+    default: ['messaging']
+    type: comma_delimited_list
+  KeystoneNotificationFormat:
+    description: The Keystone notification format
+    default: 'basic'
+    type: string
+    constraints:
+      - allowed_values: [ 'basic', 'cadf' ]
   MysqlClusterUniquePart:
     description: A unique identifier of the MySQL cluster the controller is in.
     type: string
@@ -671,6 +681,8 @@ resources:
         keystone_signing_certificate: {get_param: KeystoneSigningCertificate}
         keystone_ssl_certificate: {get_param: KeystoneSSLCertificate}
         keystone_ssl_certificate_key: {get_param: KeystoneSSLCertificateKey}
+        keystone_notification_driver: {get_param: KeystoneNotificationDriver}
+        keystone_notification_format: {get_param: KeystoneNotificationFormat}
         keystone_dsn:
           list_join:
             - ''
@@ -999,6 +1011,12 @@ resources:
                 keystone::admin_bind_host: {get_input: keystone_admin_api_network}
                 keystone::debug: {get_input: debug}
                 keystone::db::mysql::password: {get_input: admin_token}
+                keystone::rabbit_userid: {get_input: rabbit_username}
+                keystone::rabbit_password: {get_input: rabbit_password}
+                keystone::rabbit_use_ssl: {get_input: rabbit_client_use_ssl}
+                keystone::rabbit_port: {get_input: rabbit_client_port}
+                keystone::notification_driver: {get_input: keystone_notification_driver}
+                keystone::notification_format: {get_input: keystone_notification_format}
                 # MongoDB
                 mongodb::server::bind_ip: {get_input: mongo_db_network}
                 mongodb::server::nojournal: {get_input: mongodb_no_journal}
