--- a/puppet/hieradata/common.yaml
+++ b/puppet/hieradata/common.yaml
@@ -33,3 +33,4 @@ neutron::rabbit_heartbeat_timeout_threshold: 60
 cinder::rabbit_heartbeat_timeout_threshold: 60
 ceilometer::rabbit_heartbeat_timeout_threshold: 60
 heat::rabbit_heartbeat_timeout_threshold: 60
+keystone::rabbit_heartbeat_timeout_threshold: 60
