Allow customization of the Ceph pool names
This is useful in those scenarios were we want to use an external
Ceph deployment with multiple overclouds.

Change-Id: I1749d2a6547f6ce25843709e46a1447e8d42cfff
(cherry picked from commit e19ae9dfe03e2868562ef090c455aa9e8c394d9e)

--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -3,7 +3,7 @@
 resource_registry:
   OS::TripleO::CephClusterConfig::SoftwareConfig: ../puppet/extraconfig/ceph/ceph-external-config.yaml
 
-parameters:
+parameter_defaults:
   # NOTE: These example parameters are required when using Ceph External
   #CephClusterFSID: '4b5c8c0a-ff60-454b-a1b4-9747aa737d19'
   #CephClientKey: 'AQDLOh1VgEp6FRAAFzT7Zw+Y9V6JJExQAsRnRQ=='
@@ -13,6 +13,11 @@ parameters:
   NovaEnableRbdBackend: true
   CinderEnableRbdBackend: true
   GlanceBackend: rbd
+  # If the Ceph pools which host VMs, Volumes and Images do not match these
+  # names, edit the following as needed.
+  NovaRbdPoolName: vms
+  CinderRbdPoolName: volumes
+  GlanceRbdPoolName: images
 
   # finally we disable the Cinder LVM backend
   CinderEnableIscsiBackend: false
