--- a/puppet/ceph-cluster-config.yaml
+++ b/puppet/ceph-cluster-config.yaml
@@ -27,6 +27,15 @@ parameters:
     type: comma_delimited_list
   ceph_mon_ips:
     type: comma_delimited_list
+  NovaRbdPoolName:
+    default: vms
+    type: string
+  CinderRbdPoolName:
+    default: volumes
+    type: string
+  GlanceRbdPoolName:
+    default: images
+    type: string
 
 resources:
   CephClusterConfigImpl:
@@ -69,11 +78,21 @@ resources:
                         secret: 'ADMIN_KEY',
                         mode: '0644',
                         cap_mon: 'allow r',
-                        cap_osd: 'allow class-read object_prefix rbd_children, allow rwx pool=volumes, allow rwx pool=vms, allow rwx pool=images'
+                        cap_osd: 'allow class-read object_prefix rbd_children, allow rwx pool=CINDER_POOL, allow rwx pool=NOVA_POOL, allow rwx pool=GLANCE_POOL'
                       }
                     }"
                     params:
                       ADMIN_KEY: {get_param: ceph_admin_key}
+                      NOVA_POOL: {get_param: NovaRbdPoolName}
+                      CINDER_POOL: {get_param: CinderRbdPoolName}
+                      GLANCE_POOL: {get_param: GlanceRbdPoolName}
+                nova::compute::rbd::libvirt_images_rbd_pool: {get_param: NovaRbdPoolName}
+                cinder_rbd_pool_name: {get_param: CinderRbdPoolName}
+                glance::backend::rbd::rbd_store_pool: {get_param: GlanceRbdPoolName}
+                ceph_pools:
+                  - {get_param: CinderRbdPoolName}
+                  - {get_param: NovaRbdPoolName}
+                  - {get_param: GlanceRbdPoolName}
 
 outputs:
   config_id:
