Allow customization of Ceph client user
Previously we enforced the Ceph user used by the OpenStack clients
to be named 'openstack', this change allows for customization
of such a name.

Change-Id: Idef3e1ed4e8e21b645081869b8d6fad2329bdc60

--- a/environments/puppet-ceph-external.yaml
+++ b/environments/puppet-ceph-external.yaml
@@ -14,10 +14,12 @@ parameter_defaults:
   CinderEnableRbdBackend: true
   GlanceBackend: rbd
   # If the Ceph pools which host VMs, Volumes and Images do not match these
-  # names, edit the following as needed.
+  # names OR the client keyring to use is not named 'openstack',  edit the
+  # following as needed.
   NovaRbdPoolName: vms
   CinderRbdPoolName: volumes
   GlanceRbdPoolName: images
+  CephClientUserName: openstack
 
   # finally we disable the Cinder LVM backend
   CinderEnableIscsiBackend: false
