--- a/os-apply-config/ceph-cluster-config.yaml
+++ b/os-apply-config/ceph-cluster-config.yaml
@@ -13,7 +13,7 @@ parameters:
   ceph_client_key:
     default: ''
     type: string
-    description: Ceph key used to create the 'openstack' user keyring.
+    description: Ceph key used to create the client user keyring.
   ceph_fsid:
     default: ''
     type: string
@@ -35,6 +35,9 @@ parameters:
     type: string
   GlanceRbdPoolName:
     default: images
+    type: string
+  CephClientUserName:
+    default: openstack
     type: string
 
 resources:
