--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -910,6 +910,7 @@ resources:
             - '"%{::osfamily}"'
             - common
             - cinder_netapp_data # Optionally provided by ControllerExtraConfigPre
+            - neutron_bigswitch_data # Optionally provided by ControllerExtraConfigPre
             - neutron_cisco_data # Optionally provided by ControllerExtraConfigPre
           datafiles:
             controller_extraconfig:
