puppet: run keystone in wsgi
For both HA & non-HA scenarios, switch puppet-keystone configuration to
be run in a WSGI process instead of eventlet.
WSGI is the way to go for scaling Keystone, moreover, eventlet won't be
support in next OpenStack releases.

Co-Authored-By: Dan Prince <dprince@redhat.com>
Depends-On: I22a348c298ff44f616b2e898f4872eddea040239

Change-Id: I862b4a68f43347564ec3c0ddc4ec9e1d1c755cf2
Signed-off-by: Jason Guiditta <jguiditt@redhat.com>

--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -1334,8 +1334,10 @@ resources:
                 keystone_ssl_certificate: {get_input: keystone_ssl_certificate}
                 keystone_ssl_certificate_key: {get_input: keystone_ssl_certificate_key}
                 keystone::database_connection: {get_input: keystone_dsn}
-                keystone::public_bind_host: {get_input: keystone_public_api_network}
                 keystone::admin_bind_host: {get_input: keystone_admin_api_network}
+                keystone::public_bind_host: {get_input: keystone_public_api_network}
+                keystone::wsgi::apache::bind_host: {get_input: keystone_public_api_network}
+                keystone::wsgi::apache::admin_bind_host: {get_input: keystone_admin_api_network}
                 keystone::debug: {get_input: debug}
                 keystone::db::mysql::password: {get_input: admin_token}
                 keystone::rabbit_userid: {get_input: rabbit_username}
