--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -50,6 +50,8 @@ keystone::config::keystone_config:
     value: 'HTTP_X_FORWARDED_PROTO'
   ec2/driver:
     value: 'keystone.contrib.ec2.backends.sql.Ec2'
+keystone::service_name: 'httpd'
+keystone::wsgi::apache::ssl: false
 
 #swift
 swift::proxy::pipeline:
