--- a/overcloud-resource-registry.yaml
+++ b/overcloud-resource-registry.yaml
@@ -23,6 +23,12 @@ resource_registry:
   OS::TripleO::NodeExtraConfigPost: extraconfig/post_deploy/default.yaml
   OS::TripleO::Tasks::PackageUpdate: extraconfig/tasks/yum_update.yaml
 
+  # "AllNodes" Extra cluster config, runs on all nodes prior to the post_deploy
+  # phase, e.g when puppet is applied, but after the pre_deploy phase.  Useful when
+  # configuration with knowledge of all nodes in the cluster is required vs single
+  # node configuration in the pre_deploy step.
+  OS::TripleO::AllNodesExtraConfig: extraconfig/all_nodes/default.yaml
+
   # TripleO overcloud networks
   OS::TripleO::Network: network/networks.yaml
   OS::TripleO::VipConfig: vip-config.yaml
