--- a/puppet/cinder-storage.yaml
+++ b/puppet/cinder-storage.yaml
@@ -226,6 +226,7 @@ resources:
       config:
         hiera:
           hierarchy:
+            - '"%{::uuid}"'
             - heat_config_%{::deploy_config_name}
             - volume_extraconfig
             - extraconfig
