--- a/puppet/compute.yaml
+++ b/puppet/compute.yaml
@@ -333,6 +333,7 @@ resources:
       config:
         hiera:
           hierarchy:
+            - '"%{::uuid}"'
             - heat_config_%{::deploy_config_name}
             - compute_extraconfig
             - extraconfig
