--- a/puppet/controller.yaml
+++ b/puppet/controller.yaml
@@ -896,6 +896,7 @@ resources:
       config:
         hiera:
           hierarchy:
+            - '"%{::uuid}"'
             - heat_config_%{::deploy_config_name}
             - controller_extraconfig
             - extraconfig
