--- a/puppet/swift-storage.yaml
+++ b/puppet/swift-storage.yaml
@@ -156,6 +156,7 @@ resources:
       config:
         hiera:
           hierarchy:
+            - '"%{::uuid}"'
             - heat_config_%{::deploy_config_name}
             - object_extraconfig
             - extraconfig
