switch to vxlan by default
VXLAN has better performance (20-25% better)
NICs with VXLAN offload are more common

Change-Id: If57c79a1309ae178b3e82d54bb101dde584c86cc
Related: rhbz#1244864

--- a/deprecated/nova-compute-instance.yaml
+++ b/deprecated/nova-compute-instance.yaml
@@ -100,7 +100,7 @@ parameters:
   NeutronHost:
     type: string
   NeutronNetworkType:
-    default: 'gre'
+    default: 'vxlan'
     description: The tenant network type for Neutron, either gre or vxlan.
     type: string
   NeutronNetworkVLANRanges:
@@ -114,7 +114,7 @@ parameters:
     description: A port to add to the NeutronPhysicalBridge.
     type: string
   NeutronTunnelTypes:
-    default: 'gre'
+    default: 'vxlan'
     description: |
         The tunnel types for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'gre,vxlan'
