--- a/puppet/controller-puppet.yaml
+++ b/puppet/controller-puppet.yaml
@@ -309,7 +309,7 @@ parameters:
     description: Whether to enable l3-agent HA
     type: string
   NeutronNetworkType:
-    default: 'gre'
+    default: 'vxlan'
     description: The tenant network type for Neutron, either gre or vxlan.
     type: string
   NeutronNetworkVLANRanges:
@@ -351,7 +351,7 @@ parameters:
     description: If set, the public interface is a vlan with this device as the raw device.
     type: string
   NeutronTunnelTypes:
-    default: 'gre'
+    default: 'vxlan'
     description: |
         The tunnel types for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'gre,vxlan'
