--- a/controller.yaml
+++ b/controller.yaml
@@ -333,7 +333,7 @@ parameters:
     default: 'datacentre'
     description: If set, flat networks to configure in neutron plugins.
   NeutronNetworkType:
-    default: 'gre'
+    default: 'vxlan'
     description: The tenant network type for Neutron, either gre or vxlan.
     type: string
   NeutronNetworkVLANRanges:
@@ -375,7 +375,7 @@ parameters:
     description: If set, the public interface is a vlan with this device as the raw device.
     type: string
   NeutronTunnelTypes:
-    default: 'gre'
+    default: 'vxlan'
     description: |
         The tunnel types for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'gre,vxlan'
