--- a/puppet/compute-puppet.yaml
+++ b/puppet/compute-puppet.yaml
@@ -97,7 +97,7 @@ parameters:
   NeutronNetworkType:
     type: string
     description: The tenant network type for Neutron, either gre or vxlan.
-    default: 'gre'
+    default: 'vxlan'
   NeutronNetworkVLANRanges:
     default: 'datacentre'
     description: >
@@ -123,7 +123,7 @@ parameters:
     description: |
         The tunnel types for the Neutron tenant network. To specify multiple
         values, use a comma separated string, like so: 'gre,vxlan'
-    default: 'gre'
+    default: 'vxlan'
   NeutronTunnelIdRanges:
     description: |
         Comma-separated list of <tun_min>:<tun_max> tuples enumerating ranges
