--- a/network/endpoints/endpoint_map.yaml
+++ b/network/endpoints/endpoint_map.yaml
@@ -40,6 +40,9 @@ parameters:
   SwiftProxyVirtualIP:
     type: string
     default: ''
+  SaharaApiVirtualIP:
+    type: string
+    default: ''
   EndpointMap:
     type: json
     default:
@@ -74,6 +77,9 @@ parameters:
       SwiftAdmin: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
       SwiftInternal: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
       SwiftPublic: {protocol: 'http', port: '8080', host: 'IP_ADDRESS'}
+      SaharaAdmin: {protocol: 'http', port: '8386', host: 'IP_ADDRESS'}
+      SaharaInternal: {protocol: 'http', port: '8386', host: 'IP_ADDRESS'}
+      SaharaPublic: {protocol: 'http', port: '8386', host: 'IP_ADDRESS'}
     description: Mapping of service endpoint -> protocol. Typically set
                  via parameter_defaults in the resource registry.
   CloudName:
@@ -404,6 +410,31 @@ resources:
       IP: {get_param: SwiftProxyVirtualIP}
       CloudName: {get_param: CloudName}
 
+  SaharaInternal:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: SaharaInternal
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: SaharaApiVirtualIP}
+      CloudName: {get_param: CloudName}
+      UriSuffix: '/v1.1/%(tenant_id)s'
+  SaharaPublic:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: SaharaPublic
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: SaharaApiVirtualIP}
+      CloudName: {get_param: CloudName}
+      UriSuffix: '/v1.1/%(tenant_id)s'
+  SaharaAdmin:
+    type: OS::TripleO::Endpoint
+    properties:
+      EndpointName: SaharaAdmin
+      EndpointMap: { get_param: EndpointMap }
+      IP: {get_param: SaharaApiVirtualIP}
+      CloudName: {get_param: CloudName}
+      UriSuffix: '/v1.1/%(tenant_id)s'
+
 outputs:
   endpoint_map:
     value:
@@ -448,3 +479,6 @@ outputs:
       SwiftS3Internal: {get_attr: [ SwiftS3Internal, endpoint] }
       SwiftS3Public: {get_attr: [ SwiftS3Public, endpoint] }
       SwiftS3Admin: {get_attr: [ SwiftS3Admin, endpoint] }
+      SaharaInternal: {get_attr: [ SaharaInternal, endpoint] }
+      SaharaPublic: {get_attr: [ SaharaPublic, endpoint] }
+      SaharaAdmin: {get_attr: [ SaharaAdmin, endpoint] }
