Set pacemaker default resource-stickiness
This is required for HA to work correctly.

Change-Id: I9faa8fd7bbbac67de5c468ab6fc4edb2260dffe7
Depends-On: https://github.com/redhat-openstack/puppet-pacemaker/pull/61

--- a/puppet/hieradata/controller.yaml
+++ b/puppet/hieradata/controller.yaml
@@ -91,6 +91,8 @@ heat::instance_user: ''
 # pacemaker
 pacemaker::corosync::cluster_name: 'tripleo_cluster'
 pacemaker::corosync::manage_fw: false
+pacemaker::resource_defaults::defaults:
+  resource-stickiness: { value: INFINITY }
 
 # horizon
 horizon::allowed_hosts: '*'
